<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.ida.wallet.signer</groupId>
        <artifactId>wallet-security-sgx</artifactId>
        <version>0.1.0</version>
    </parent>

    <artifactId>wallet-security-enclave</artifactId>
    <packaging>jar</packaging>
    <name>wallet-security-enclave</name>

    <properties>
        <svm.maven.version>0.9.13</svm.maven.version>
        <org.apache.teaclave.javasdk.enclave.privatePem.path/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.ida.wallet.signer</groupId>
            <artifactId>wallet-security-common</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.teaclave.javasdk</groupId>
            <artifactId>enclave</artifactId>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.apache.teaclave.javasdk.thirdpartylibs</groupId>
            <artifactId>bouncycastle-native</artifactId>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.auto.service</groupId>
            <artifactId>auto-service-annotations</artifactId>
            <version>1.0-rc6</version>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.auto.service</groupId>
            <artifactId>auto-service</artifactId>
            <version>1.0-rc6</version>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit-pioneer</groupId>
            <artifactId>junit-pioneer</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${svm.maven.version}</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>test-native</id>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <configuration>
                                    <buildArgs>
                                        <buildArg>--no-fallback</buildArg>
                                    </buildArgs>
                                </configuration>
                                <phase>test</phase>
                            </execution>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <configuration>
                                    <imageName>lib_mock_svm_load</imageName>
                                    <buildArgs>
                                        <buildArg>--shared</buildArg>
                                        <buildArg>--no-fallback</buildArg>
                                        <buildArg>-H:Path=svm-output</buildArg>
                                        <buildArg>-H:ReflectionConfigurationFiles=${project.basedir}/target/native/agent-output/test/reflect-config.json</buildArg>
                                    </buildArgs>
                                </configuration>
                                <phase>package</phase>
                            </execution>
                            <execution>
                                <id>build-native-tee</id>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <configuration>
                                    <imageName>lib_tee_sdk_svm_load</imageName>
                                    <buildArgs>
                                        <buildArg>--shared</buildArg>
                                        <buildArg>--no-fallback</buildArg>
                                        <buildArg>-H:Path=svm-output</buildArg>
                                        <buildArg>-H:+RunInEnclave</buildArg>
                                        <!--
                                            禁止 SVM 在 enclave 内部“创建线程：enclave 内部没有创建线程的能力。
                                            Intel SGX规定：enclave 内部的线程必须由 enclave 外部创建并进入 enclave 才能运行。
                                            创建线程需要OS的支持，sgx的设计本来就是不信任os，所以不允许在enclave里面创建线程。
                                        -->
                                        <buildArg>-H:-AllowVMInternalThreads</buildArg>
                                        <!--
                                            生成后的 native image 在运行时”可使用的最大 Java Heap。
                                            Apache官方推荐：不能超过 enclave_epc_memory 的80%
                                        -->
                                        <buildArg>-R:MaxHeapSize=2300m</buildArg>

                                        <buildArg>-H:ReflectionConfigurationFiles=${project.basedir}/target/native/agent-output/test/reflect-config.json</buildArg>
                                    </buildArgs>
                                </configuration>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <agent>
                                <enabled>true</enabled>
                            </agent>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>exec-maven-plugin</artifactId>
                        <groupId>org.codehaus.mojo</groupId>
                        <executions>
                            <execution>
                                <id>ApplicationNativeCompile</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>bash</executable>
                                    <arguments>
                                        <argument>/opt/javaenclave/build_app/make.sh</argument>
                                        <argument>${project.basedir}</argument>
                                        <argument>${org.apache.teaclave.javasdk.platform}</argument>
                                        <argument>${org.apache.teaclave.javasdk.enclave.privatePem.path}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.options=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
        </plugins>
    </build>

</project>